@@ -1,4 +1,8 @@
 Development
+    Fix infinite loop problem when hidden=true
+    Fix problem where streaming media not started when hidden
+    Fix problem with non-streaming media not playing when hidden
+    Use cache setting from GNOME MPlayer
     Set cache percent value
     Start playing when cache percent is > 20% and amount cached is > 2000K
     Fixed a bug when the player is not launched and open is called, plugin would spin forever
